# task-4

./: README.md
esp-bridge/: README.md  platformio.ini
esp-bridge/src/: main.cpp  main.h  utility.cpp
esp-receiver/: platformio.ini
esp-receiver/src/: CommandHandler.cpp  CommandHandler.h  main.cpp  main.h  utility.cpp
program-laptop/: CMakeLists.txt
program-laptop/data/: profile.json
program-laptop/src/: main.cpp
